--- a/ntp/templates/default/ntp.conf.erb
+++ b/ntp/templates/default/ntp.conf.erb
@@ -7,10 +7,9 @@ filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
 
 <% if node[:ntp][:is_server] -%>
+server fnsrv02.transpera.com
+server fnsrv03.transpera.com
 server 0.us.pool.ntp.org
-server 1.us.pool.ntp.org
-server 2.us.pool.ntp.org
-server 3.us.pool.ntp.org
 <% else -%>
 <% node[:ntp][:servers].each do |ntpserver| -%>
   server <%= ntpserver %>
